syntax="proto3";
package usercenter;
option go_package = "./;usercenter";

import "common.proto";

service Tenant{
    rpc Add(TenantInfo)returns(CommonResponse){}
    rpc Update(TenantInfo)returns(CommonResponse){}
    rpc Delete(DelRequest)returns(CommonResponse){}
    rpc Query(QueryTenantRequest)returns(QueryTenantResponse){}
    rpc Enable(EnableRequest)returns(CommonResponse){}
    rpc GetAll(GetAllRequest)returns(GetAllTenantResponse){}
    rpc GetDetail(GetDetailRequest)returns(GetTenantDetailResponse){}
}

message TenantInfo{
    string id=1;
    string name=2;
    string contact=3;
    string cellPhone=4;
    string address=5;
    string businessScope=6;
    string areaCovered=7;
    int32 staffSize=8;
    bool enable=9;
}

message QueryTenantRequest{
    int64 pageIndex=1;
    int64 pageSize=2;
    string orderField=3;
    bool desc=4;
    string name=5;
}

message QueryTenantResponse{
    Code code=1;
    string message=2;
    repeated TenantInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllTenantResponse{
    Code code=1;
    string message=2;
    repeated TenantInfo data=3;
}

message GetTenantDetailResponse{
    Code code=1;
    string message=2;
    TenantInfo data=3;
}